Fixed catalog ru on mobile

--- a/src/css/blocks/moreButton.css
+++ b/src/css/blocks/moreButton.css
@@ -29,6 +29,7 @@
 }
 
 .moreButton__button {
+  flex-shrink: 0;
   position: relative;
   cursor: pointer;
   background-color: var(--cream);
@@ -96,4 +97,9 @@
     width: 10px;
     height: 0.61px;
   }
+}
+@media screen and (max-width: 580px) {
+  .moreButton--shorter .moreButton__line::after {
+    width: 70px;
+  }  
 }
