--- a/src/css/blocks/projectItem.css
+++ b/src/css/blocks/projectItem.css
@@ -2,6 +2,9 @@
   cursor: pointer;
   max-width: 567px;
   width: 33%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* .projectItem:not(:last-child) {
@@ -51,7 +54,8 @@
   font-weight: 500;
   font-size: 26px;
   text-transform: uppercase;
-  margin-bottom: 21px;
+  margin-bottom: 13px;
+  min-height: 33px;
 }
 
 .projectItem__data {
@@ -145,7 +149,7 @@
 
   .projectItem__title {
     font-size: 22px;
-    margin-bottom: 25px;
+    margin-bottom: 17px;
   }
 
   .projectItem__data {
@@ -209,7 +213,7 @@
 
   .projectItem__title {
     font-size: 14px;
-    margin-bottom: 12px;
+    margin-bottom: 5px;
   }
 
   .projectItem__data {
